desktop version finished

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 <body>
     <div id="app">
         <h2  id="eventName"></h2>
-        <div id="eventsContainer">
-
-        </div>
+        <div id="eventsContainer"></div>
     </div>
-
     <footer>
         <p>Create with love by NoeDenisel</p>
         
     </footer>
+
+  
    <script src="main.js"></script>
 </body>
 </html>
