finish primer version

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="eventsContainer"></div>
     </div>
     <footer>
-        <p>Create with love by NoeDenisel</p>
+        <p>Create with love by NoeDenisel - Creditos de la imagen a su autor</p>
         
     </footer>
 
